# fastapi_project

./: pyproject.toml
app/: config.py  db.py  exceptions.py  fake_data.py  main.py
app/admin/: views.py
app/bookings/: models.py  repo.py  router.py  schemas.py
app/hotels/: models.py  repo.py  router.py
app/hotels/rooms/: models.py  repo.py  router.py
app/images/: router.py
app/migrations/versions/: 26c635138bee_add_fk.py  6c80a150c8bb_initial_migration.py
app/pages/: router.py
app/repo/: base.py
app/rooms/: models.py
app/tasks/: celery_app.py  email_templates.py  sheduled.py  tasks.py
app/tasks/reminders/: bookings.py
app/templates/: hotels.html
app/users/: auth.py  dependencies.py  models.py  repo.py  router.py
